frame/support/test/tests/pallet_ui/call_missing_weight.stderr
error: Invalid pallet::call, requires weight attribute i.e. `#[pallet::weight($expr)]`
  --> $DIR/call_missing_weight.rs:17:7
   |
17 |         pub fn foo(origin: OriginFor<T>) -> DispatchResultWithPostInfo {}
   |             ^^
